# Batch-Renamer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
docs/: Architecture.md  Release-note.md  bug_report.md  contributing.md  user-guide.md
include/core/: FileManager.h  RenameEngine.h  RenameExecutor.h  ThemeManager.h
include/models/: FileItem.h  RenameOperation.h  RenameOptions.h
include/ui/: AboutDialog.h  MainWindow.h
include/widgets/: DropArea.h  FileTable.h  RenamePanel.h
installer/: installer.iss
resources/: NovaBytesResources.qrc  app.rc
resources/qss/: NovaBytesDark.qss
src/app/: main.cpp
src/core/: FileManager.cpp  RenameEngine.cpp  RenameExecutor.cpp  ThemeManager.cpp
src/ui/: AboutDialog.cpp  MainWindow.cpp
src/widgets/: DropArea.cpp  FileTable.cpp  RenamePanel.cpp
